# mlops-cats-dogs-project

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  ASSIGNMENT_GUIDE.md  Dockerfile  EVIDENCE_INDEX.md  Makefile  README.md  RECORDING_STEPS.md  SUBMISSION_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  params.yaml  prometheus.yml  pyproject.toml  pytest.ini  requirements.prod.txt  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci-cd.yml
data/: processed.dvc  raw.dvc
kubernetes/: configmap.yaml  deployment.yaml
mlflow_artifacts/: classification_report.txt  model_summary.txt  training_config.json
models/: .gitkeep  classification_report.txt  model_config.json
notebooks/: 01_exploration.ipynb
scripts/: create_submission_bundle.py  evaluate.py  init_project.bat  init_project.sh  monitor_performance.py  prepare_data.py  setup_grafana.py  smoke_test.py  train_docker.py
src/: __init__.py
src/api/: __init__.py  main.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/models/: __init__.py  cnn_model.py  train.py
src/monitoring/: __init__.py  drift_detector.py  metrics.py
tests/: conftest.py  test_api.py  test_model.py  test_preprocessing.py
